--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">instagram-demo</string>
+    <string name="facebook_app_id">667509350477967</string>
 </resources>
