--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">instagram-demo</string>
     <string name="facebook_app_id">667509350477967</string>
 
+    <!-- API Host -->
+    <string name="authorization_host">https://api.instagram.com</string>
+    <string name="user_contents_host">https://graph.instagram.com</string>
+
     <string name="login_id_hint">전화번호, 이메일 주소 또는 사용자 이름</string>
     <string name="login_password_hint">@string/password</string>
 
