로그인 화면 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,17 @@
     <string name="authorization_host">https://api.instagram.com</string>
     <string name="user_contents_host">https://graph.instagram.com</string>
 
-    <string name="login_id_hint">전화번호, 이메일 주소 또는 사용자 이름</string>
-    <string name="login_password_hint">@string/password</string>
+
+    <!--
+    ID, PASSWORD 입력 방식으로 로그인하는 것이 불가능해서,
+    미리 테스터 계정으로 등록해둔 클라이언트 아이디 정보를 이용해서 로그인 하도록 함.
+    -->
+    <string name="client_id">2708291786122110</string>
+    <string name="redirect_url">https://www.kakaopay.com/</string>
+
+    <string name="login_id">클라이언트 아이디</string>
+    <string name="login_redirect_uri">리다이렉트 URI</string>
 
     <!-- Word -->
     <string name="login">로그인</string>
-    <string name="password">비밀번호</string>
 </resources>
