--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="error_not_founded_slash">URI 맨 뒤에 슬래시(\'\/\')를 붙여주세요.</string>
     <string name="error_oauth_authorize_uri">Oauth 인증 URI 생성에 실패했습니다.</string>
     <string name="error_access_token_obtain">액세스 토큰 생성이 실패했습니다.</string>
+    <string name="error_access_token_expired">토큰이 만료되었습니다.</string>
 </resources>
